[workspace]
members = [".", "nat-pmp-client"]

[package]
name = "nat-tool"
version = "0.1.0"
edition = "2021"
description = "Control port mappings for a gateway compatible with NAT-PMP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
console = { version = "0.15.8", optional = true }
miette = { version = "5.6.0", features = ["fancy-no-backtrace"] }
nat-pmp-client = { path = "nat-pmp-client" }
netdev = "0.29.0"
thiserror = "1.0.61"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["server"]
server = ["nat-pmp-client/server", "dep:console"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
strip = "debuginfo"
